--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header id="hero" style="background: linear-gradient(to right, #007bff, #00bfff); color: #fff;">
         <div class="hero-container">
-            <img src="https://drive.google.com/file/d/1QNq4lsvz7aGVTZRj7XtXbNdRe3w94Iaw/view?usp=drive_link" alt="Hojefa Laxmidhar" class="hero-photo">
+            <img src="https://drive.google.com/file/d/1QNq4lsvz7aGVTZRj7XtXbNdRe3w94Iaw/view?usp=sharing" alt="Hojefa Laxmidhar" class="hero-photo">
             <h1>Welcome to My Portfolio</h1>
             <p>I'm <span>Hojefa Laxmidhar</span>, a passionate <span>Engineer</span> & <span>Programmer</span></p>
             <nav class="navbar">
