--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <p>
                     Designed and developed a Python-powered voice assistant named "Huzaifa" that performs various tasks such as opening websites, playing music, reading news aloud, and recognizing user commands. Integrated advanced libraries for speech recognition and text-to-speech capabilities to create an interactive and user-friendly assistant. Showcased expertise in automation, API integration, and user interface design.
                 </p>
-                <a href="https://github.com/LaxmidharHojefa/Huzaifa---Personal-AI-Assistant" class="btn">View Project</a>
+                <a href="https://github.com/LaxmidharHojefa/Huzaifa---Personal-AI-Assistant" class="btn" target="_blank">View Project</a>
             </div>
 
 <!--             Flipkart Web Scraping Project -->
@@ -75,7 +75,7 @@
                 <p>
                     Created a Python script to extract product names, descriptions, prices, and ratings from Flipkart using libraries like BeautifulSoup and Pandas. The project was aimed at learning and exploring web scraping techniques, showcasing expertise in data extraction and ethical data handling practices.
                 </p>
-                <a href="https://github.com/LaxmidharHojefa/Flipkart-Mobile-Scraper" class="btn">View Project</a>
+                <a href="https://github.com/LaxmidharHojefa/Flipkart-Mobile-Scraper" class="btn" target="_blank">View Project</a>
             </div>
 
         </div>
@@ -92,7 +92,7 @@
                 <p>
                     Successfully completed a remote internship as a Python Programmer at Codsoft. Accomplished multiple tasks assigned by the company, showcasing expertise in designing and implementing Python-based solutions. Demonstrated strong time management and self-motivation by consistently meeting deadlines and uploading the completed projects to a dedicated GitHub repository named 'CodSoft.'
                 </p>
-                <a href="https://github.com/LaxmidharHojefa/CODSOFT" class="btn">View Project</a>
+                <a href="https://github.com/LaxmidharHojefa/CODSOFT" class="btn" target="_blank">View Project</a>
             </div>
 
         </div>
